add drop preview instances

--- a/app/styles/components/_CAScheduleCourse.scss
+++ b/app/styles/components/_CAScheduleCourse.scss
@@ -2,6 +2,10 @@
 
     .schedule-section {
         position: relative;
+
+        &:active {
+            pointer-events: none;
+        }
     }
 
     @each $color-name, $color in $ca-colors {
