--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -3,6 +3,7 @@
 @import "components/CABasket";
 @import "components/CASchedule";
 @import "components/CAScheduleCourse";
+@import "components/CAScheduleDropTargets";
 @import "components/CAScheduleInstance";
 @import "components/CABasketAdder";
 @import "components/CABasketCourse";
