--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -9,3 +9,4 @@
 @import "components/CABasketCourse";
 @import "components/CAToggle";
 @import "components/CAColorPanel";
+@import "components/CAModal";
