--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -46,7 +46,9 @@
 .ca-simple-button {
     font-size: 9px;
     color: #C4C4C4;
-    letter-spacing: .27em;
+    letter-spacing: .28em;
+    text-indent: .28em;
+    font-family: 'bunt';
     text-transform: uppercase;
     border: none;
     outline: none;
@@ -55,8 +57,56 @@
     padding: 2px 3px;
     @include transition(all .13s ease-in-out);
 
+    &.condensed {
+        letter-spacing: .2em;
+        text-indent: .2em;
+    }
+
     &:hover {
         opacity: .63;
+    }
+}
+
+.ca-clear-input {
+    border: 0;
+    background: transparent;
+    font-family: 'bunt';
+    outline: none;
+    padding: 0;
+    margin: 0;
+    font-size: 17px;
+    color: #424242;
+
+    @include placeholder {
+        color: #C4C4C4;
+        font-size: 15px;
+        letter-spacing: .24em;
+        text-transform: uppercase;
+        font-family: 'bunt';
+        position: relative;
+        top: 3px;
+        left: 2px;
+        // text-indent: 1px;
+    }
+}
+
+.ca-red-button {
+    text-transform: uppercase;
+    border: none;
+    outline: none;
+    color: white;
+    cursor: pointer;
+    background: #D17E7B;
+    border-radius: 4px;
+    padding: 8px 15px 7px;
+    text-indent: .25em;
+    letter-spacing: .25em;
+    font-size: 10px;
+    font-family: 'bunt';
+    @include transition(all .13s ease-in-out);
+
+    &:hover {
+        background: lighten(#D17E7B, 8%);
     }
 }
 
