--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -10,3 +10,5 @@
 @import "components/CAToggle";
 @import "components/CAColorPanel";
 @import "components/CAModal";
+@import "components/CAModalLogin";
+@import "components/CAModalSignup";
