build more modal support

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -12,3 +12,4 @@
 @import "components/CAModal";
 @import "components/CAModalLogin";
 @import "components/CAModalSignup";
+@import "components/CAModalActivation";
