aunthentication and data persistence

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>React Isomorphic Server Side Rendering Example</title>
+    <title>Cornellapp</title>
     <link href='/assets/css/style.css' rel="stylesheet">
     <script src="//use.typekit.net/rfd1tkc.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
@@ -10,7 +10,7 @@
     <div id="cornell-app-mount"><%- reactOutput %></div>
 
     <script id='context' type='application/json'>
-        <%- context %>
+        <%- contextString %>
     </script>
 
     <script src="/assets/js/bundle.js"></script>
