user model control and data integration algorithm

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -13,3 +13,5 @@
 @import "components/CAModalLogin";
 @import "components/CAModalSignup";
 @import "components/CAModalActivation";
+@import "components/CAModalAccount";
+@import "components/CACatalog";
