--- a/app/styles/components/_CAHeader.scss
+++ b/app/styles/components/_CAHeader.scss
@@ -8,11 +8,11 @@
         @include container(1080px);
 
         > .left {
-            @include span(7.5 of 12);
+            @include span(8 of 12);
         }
 
         > .right {
-            @include span(4.5 of 12 last);
+            @include span(4 of 12 last);
             text-align: right;
         }
     }
@@ -38,6 +38,7 @@
 
         button {
             margin-left: 15px;
+            text-transform: uppercase;
         }
     }
 }
