--- a/app/styles/components/_CAModal.scss
+++ b/app/styles/components/_CAModal.scss
@@ -75,6 +75,17 @@
                 padding-bottom: 10px;
             }
 
+            .input-label {
+                color: #C4C4C4;
+                font-size: 11px;
+                text-indent: 2px;
+                margin-top: 20px;
+
+                &:first-of-type {
+                    margin-top: 0;
+                }
+            }
+
             .error-message {
                 font-size: 12px;
                 padding-bottom: 10px;
