--- a/app/styles/components/_CACatalog.scss
+++ b/app/styles/components/_CACatalog.scss
@@ -177,6 +177,7 @@
             right: 0;
 
             iframe {
+                background: #F8F8F8;
                 width: 100%;
                 height: 100%;
             }
