--- a/app/views/catalog/departments.ejs
+++ b/app/views/catalog/departments.ejs
@@ -1,5 +1,5 @@
 <% var item = function(subject) { %>
-    <a href="#">
+    <a href="department/<%= subject.value %>">
         <span class="abbreviation"><%= subject.value %></span>
         <span class="description"><%= subject.descrformal %></span>
     </a>
