--- a/app/views/catalog.ejs
+++ b/app/views/catalog.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>All Departments</title>
+    <title><%= title %></title>
     <link href='/assets/css/catalog.css' rel="stylesheet">
     <script src="//use.typekit.net/rfd1tkc.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
