--- a/app/styles/catalog.scss
+++ b/app/styles/catalog.scss
@@ -6,8 +6,9 @@
 
 body {
     padding: 32px 55px;
-    background: #F8F8F8;
+    background: #FDFDFD;
     font-family: 'bunt';
 }
 
 @import "catalogs";
+@import "ui";
