--- a/app/styles/catalogs/_course-entry.scss
+++ b/app/styles/catalogs/_course-entry.scss
@@ -1,4 +1,5 @@
 .course-entry {
+    padding-bottom: 40px;
 
     .upper {
         @extend .cf;
@@ -19,6 +20,52 @@
             float: right;
             color: #B8B8B8;
             font-size: 10px;
+        }
+    }
+
+    .lower {
+        padding-top: 10px;
+        @extend .cf;
+
+        .description {
+            padding-bottom: 12px;
+            font-weight: 500;
+            color: #8E8E8E;
+            font-size: 13px;
+            line-height: 1.31;
+        }
+
+        .action-buttons {
+            float: right;
+            font-size: 0;
+            padding-left: 15px;
+
+            .button {
+                margin-left: 8px;
+            }
+        }
+
+        .extra-info {
+            color: #8E8E8E;
+            font-size: 13px;
+            font-weight: 500;
+            line-height: 1.24;
+
+            .info {
+                margin-bottom: 7px;
+            }
+
+            strong {
+                font-weight: 600;
+            }
+
+            .outcomes {
+                padding-left: 35px;
+
+                li {
+                    list-style-type: circle;
+                }
+            }
         }
     }
 }
