--- a/app/styles/components/_CACatalog.scss
+++ b/app/styles/components/_CACatalog.scss
@@ -32,19 +32,19 @@
         top: 0;
         bottom: 0;
         left: 0;
-        width: 764px;
+        width: 822px;
         z-index: 500;
         visibility: hidden;
         background: #F8F8F8;
         box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
-        @include transform(translate(-764px, 0px));
+        @include transform(translate(-822px, 0px));
         @include transition(all .5s $ios-easing);
 
         .window-bar {
             background: #F4F4F4;
             height: 75px;
             padding: 0px 55px;
-            border-bottom: 1px solid #D6D6D6;
+            border-bottom: 1px solid #E7e7e7;
 
             .logo {
                 display: inline-block;
@@ -68,7 +68,7 @@
                 color: #424242;
                 margin-top: 25px;
                 margin-left: 4px;
-                width: 422px;
+                width: 504px;
 
                 @include placeholder {
                     font-size: 14px;
@@ -116,7 +116,7 @@
                 button {
                     display: inline-block;
                     border: 1px solid #E1E1E1;
-                    background: #F9F9F9;
+                    background: #FEFEFE;
                     font-size: 25px;
                     color: #C6C6C6;
                     height: 34px;
@@ -133,6 +133,7 @@
                     }
 
                     &.disabled {
+                        background: #F9F9F9;
                         opacity: .5;
                         cursor: default;
                     }
@@ -177,7 +178,7 @@
             right: 0;
 
             iframe {
-                background: #F8F8F8;
+                background: #FEFEFE;
                 width: 100%;
                 height: 100%;
             }
