--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -7,6 +7,10 @@
 body {
 	font-family: 'bunt';
 	background: #F3F3F4;
+
+    &.disable-scroll {
+        overflow: hidden;
+    }
 }
 
 @import "ui";
