building catalog course

--- a/app/styles/catalogs/_course-entry.scss
+++ b/app/styles/catalogs/_course-entry.scss
@@ -2,6 +2,7 @@
     padding-bottom: 40px;
 
     .upper {
+        font-size: 17px;
         @extend .cf;
 
         .tag {
@@ -11,7 +12,7 @@
         }
 
         .title {
-            margin-left: 100px;
+            margin-left: 116px;
             color: #7C7C7C;
 
         }
