--- a/app/styles/catalogs/_course.scss
+++ b/app/styles/catalogs/_course.scss
@@ -1,6 +1,6 @@
 .catalog-course {
 
-    .roster {
+    .add {
         padding-top: 6px;
     }
 
@@ -12,21 +12,126 @@
     .enrollment {
 
         .group {
+            padding-bottom: 10px;
             padding-top: 22px;
 
             .byline {
-                font-size: 12px;
+                font-size: 13px;
                 color: #A3A3A3;
 
                 a {
                     color: #616161;
                     text-decoration: none;
+                    // margin-right: 6px;
                     @include transition(all .13s ease-in-out);
 
                     &:hover {
                         opacity: .73;
                     }
                 }
+            }
+
+            .section {
+                padding-top: 15px;
+                @extend .cf;
+
+                .meetings {
+                    float: left
+                }
+
+                .meeting {
+                    padding-bottom: 7px;
+                    @extend .cf;
+                }
+
+                .first {
+                    width: 100px;
+                    float: left;
+
+                    .tag {
+                        color: #D17E7B;
+                        font-size: 13px;
+                    }
+
+                    .classId {
+                        color: #CACACA;
+                        font-size: 11px;
+                        margin-top: 2px;
+                    }
+                }
+
+                .second {
+                    float: left;
+                    width: 120px;
+
+                    .days {
+                        color: #7C7C7C;
+                        font-size: 14px;
+                    }
+                }
+
+                .third {
+                    float: left;
+                    width: 300px;
+
+                    .time {
+                        color: #7C7C7C;
+                        font-size: 14px;
+
+                        .dates {
+                            font-size: 12px;
+                            color: #B5B5B5;
+                            vertical-align: middle;
+                            margin-left: 17px;
+                        }
+                    }
+
+                    .location {
+                        color: #7C7C7C;
+                        margin-top: 2px;
+                        font-size: 12px;
+                    }
+                }
+
+                .fourth {
+                    float: left;
+                    width: 150px;
+                    font-size: 13px;
+                    color: #7C7C7C;
+                }
+
+
+                .fifth {
+                    clear: both;
+                    color: #B5B5B5;
+                    font-size: 11px;
+                    padding-top: 6px;
+                    padding-bottom: 8px;
+                }
+            }
+
+            .credits {
+                color: #7C7C7C;
+                font-size: 15px;
+                clear: both;
+                padding-top: 10px;
+
+                .secondary {
+                    color: #B5B5B5;
+                    font-size: 12px;
+                    margin-top: 2px;
+                }
+            }
+        }
+
+        hr {
+            border: none;
+            background-color: #ddd;
+            height: 1px;
+            margin: 15px 15px -3px;
+
+            &:last-of-type {
+                display: none;
             }
         }
     }
