--- a/app/views/catalog.ejs
+++ b/app/views/catalog.ejs
@@ -10,7 +10,16 @@
     <%- include('catalog/' + type) %>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script>
+<%
+        if (typeof context !== 'undefined') {
+%>
+        context = <%- JSON.stringify(context) %>;
+<%
+        }
+%>
+
         <%# Override click action behavior and pass to the parent. %>
         $(document).on('click', 'a', function(e) {
             e.preventDefault();
@@ -30,6 +39,27 @@
             $(this).find('.label').text(count);
             $(this).toggleClass('liked', !liked);
             $(this).toggleClass('has-likes', !!count);
+
+            $.ajax({
+                type: 'post',
+                url: '/api/like/' + $(this).data('crseid') + '/' +
+                    $(this).data('subject'),
+                data: {
+                    shouldLike: !liked
+                }
+            })
+        });
+
+        <%# Click on add to courses button. %>
+        $(document).on('click', '.add', function(e) {
+            var number = $(this).data('number'),
+                subject = $(this).data('subject');
+
+            var found = _.find(context, function(c) {
+                return c.catalogNbr == number && c.subject == subject;
+            });
+
+            parent.addCourse(found);
         });
     </script>
 </body>
