--- a/app/views/activation.ejs
+++ b/app/views/activation.ejs
@@ -5,6 +5,7 @@
     <link href='/assets/css/activation.css' rel="stylesheet">
     <script src="//use.typekit.net/rfd1tkc.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
+    <link rel="icon" href="/favicon.png" type="image/png" />
 </head>
 <body>
     <header class="museo-sans">Cornellapp</header>
