--- a/app/views/catalog.ejs
+++ b/app/views/catalog.ejs
@@ -5,6 +5,7 @@
     <link href='/assets/css/catalog.css' rel="stylesheet">
     <script src="//use.typekit.net/rfd1tkc.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
+    <link rel="icon" href="/favicon.png" type="image/png" />
 </head>
 <body>
     <%- include('catalog/' + type) %>
