--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,6 +5,7 @@
     <link href='/assets/css/style.css' rel="stylesheet">
     <script src="//use.typekit.net/rfd1tkc.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
+    <link rel="icon" href="/favicon.png" type="image/png" />
 </head>
 <body>
     <div id="cornell-app-mount"><%- reactOutput %></div>
