added schedule codes

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -7,6 +7,8 @@
 @import "components/CAScheduleInstance";
 @import "components/CABasketAdder";
 @import "components/CABasketCourse";
+@import "components/CABasketEvent";
+@import "components/CABasketReview";
 @import "components/CAToggle";
 @import "components/CAColorPanel";
 @import "components/CAModal";
@@ -14,4 +16,5 @@
 @import "components/CAModalSignup";
 @import "components/CAModalActivation";
 @import "components/CAModalAccount";
+@import "components/CAModalEnrollment";
 @import "components/CACatalog";
