--- a/app/styles/components/_CAApp.scss
+++ b/app/styles/components/_CAApp.scss
@@ -17,12 +17,17 @@
         text-align: center;
         font-size: 13px;
         color: #BBBBBB;
-        padding-bottom: 10px;
+        padding-bottom: 12px;
 
         a {
             color: #888888;
             cursor: pointer;
             text-decoration: none;
+            @include transition(all .13s ease-in-out);
+
+            &:hover {
+                opacity: .73;
+            }
         }
     }
 }
