changed instance rendering and added conflict handling

--- a/app/styles/catalogs/_course.scss
+++ b/app/styles/catalogs/_course.scss
@@ -126,9 +126,9 @@
 
         hr {
             border: none;
-            background-color: #ddd;
+            background-color: #E7E7E7;
             height: 1px;
-            margin: 15px 15px -3px;
+            margin: 12px 0px -12px;
 
             &:last-of-type {
                 display: none;
