--- a/app/styles/components/_CAScheduleCourse.scss
+++ b/app/styles/components/_CAScheduleCourse.scss
@@ -14,8 +14,12 @@
             }
         }
 
-        &:active {
-            pointer-events: none;
+        &.react-draggable-dragging {
+            pointer-events: none !important;
+
+            * {
+                pointer-events: none !important;
+            }
         }
     }
 
