--- a/app/styles/components/_CAScheduleInstance.scss
+++ b/app/styles/components/_CAScheduleInstance.scss
@@ -3,6 +3,51 @@
     width: percentage(1 / 7);
     @include user-select(none);
 
+    &.conflict-of-2 {
+        width: percentage(1 / 14);
+
+        &.conflict-column-0 .schedule-instance {
+            right: 0;
+        }
+
+        &.conflict-column-1 {
+            margin-left: percentage(1 / 14);
+
+            .schedule-instance {
+                left: 0;
+            }
+        }
+    }
+
+    &.conflict-of-3 {
+        width: percentage(1 / 21);
+
+        &.conflict-column-0 .schedule-instance {
+            right: 0;
+        }
+
+        &.conflict-column-1 {
+            margin-left: percentage(1 / 21);
+
+            .schedule-instance {
+                left: 0;
+                right: 0;
+            }
+        }
+
+        &.conflict-column-2 {
+            margin-left: percentage(2 / 21);
+
+            .schedule-instance {
+                left: 0;
+            }
+        }
+    }
+
+    &.conflict-column-0 {
+        right: 0;
+    }
+
     $day-map: (
         'monday': 0,
         'tuesday': 1,
@@ -52,15 +97,16 @@
         .instance-headline {
             font-size: 11px;
             font-weight: 500;
+        }
 
-            &.long-headline {
-                font-size: 10.5px;
-            }
+        .instance-section-headline {
+            font-size: 9px;
+            font-weight: 500;
         }
 
         .instance-location {
             font-size: 10px;
-            margin-top: 4px;
+            margin-top: 5px;
         }
 
         hr {
