--- a/app/views/catalog/course.ejs
+++ b/app/views/catalog/course.ejs
@@ -75,162 +75,11 @@
                 IND: 'independent study',
             }
             for (var g = 0; g < course.related('groups').length; g++) {
+                var group = course.related('groups').at(g);
         %>
-            <div class="group">
+                <%- include('group', { group: group,
+                        componentMap: componentMap }) %>
         <%
-                var group = course.related('groups').at(g),
-                    componentsRequired = JSON.parse(
-                        group.get('componentsRequired')),
-                    componentsOptional = JSON.parse(
-                        group.get('componentsOptional')),
-                    groupByline = '';
-
-                if (componentsRequired.length + componentsOptional.length > 1) {
-                    groupByline = 'Choose';
-
-                    _.each(componentsRequired, function(c) {
-                        groupByline += ' one ' + componentMap[c];
-                    });
-                    groupByline += '. ';
-
-                    if (componentsOptional.length) {
-                        var comp = componentsOptional[0];
-                        comp = comp.charAt(0).toUpperCase() + comp.slice(1);
-
-                        groupByline += ' ' + comp + ' optional. '
-                    }
-                }
-
-
-                var combinations = JSON.parse(group.get('simpleCombinations'));
-                if (combinations.length) {
-                    groupByline += 'Combined with: ';
-                    _.each(combinations, function(combination, i) {
-                        groupByline += '<a href="course/' + combination.subject
-                            + '/' + combination.catalogNbr + '">' +
-                            combination.subject + combination.catalogNbr +
-                            '</a>';
-
-                        if (i !== combinations.length - 1)
-                            groupByline += ', ';
-                    });
-                }
-
-                if (groupByline.length) {
-        %>
-                <p class="byline"><%- groupByline %></p>
-        <%
-                }
-                var sections = group.related('sections');
-        %>
-                <div class="sections">
-        <%
-                    for (var s = 0; s < sections.length; s++) {
-                        var section = sections.at(s);
-        %>
-                    <div class="section">
-                        <div class="first">
-                            <div class="tag"><%= section.get('ssrComponent') %> <%= section.get('catalogNbr') %></div>
-                            <div class="classId"><%= section.get('classNbr') %></div>
-                        </div>
-                        <div class="meetings">
-        <%
-                        var meetings = section.related('meetings');
-                        for (var m = 0; m < meetings.length; m++) {
-                            var meeting = meetings.at(m).toJSON();
-        %>
-                            <div class="meeting">
-                                <div class="second">
-                <%
-                                var days = _.pick(meeting.pattern.split(/(?=[A-Z])/),
-                                    _.identity);
-
-                                days = _.map(days, function(day) {
-                                    var map = {
-                                        M: 'Mon',
-                                        T: 'Tue',
-                                        W: 'Wed',
-                                        R: 'Thur',
-                                        F: 'Fri',
-                                        S: 'Sat',
-                                        Su: 'Sun'
-                                    }
-                                    return map[day];
-                                });
-
-                                days = days ? days.join(', ') : 'TBA';
-                %>
-                                    <div class="days"><%= days %></div>
-                                </div>
-                                <div class="third">
-                                    <p class="time">
-                <%
-                                    var format = function(d) {
-                                        d = d.toLowerCase();
-                                        if (!d)
-                                            return '';
-
-                                        if (d[0] === '0')
-                                            return d.substring(1);
-
-                                        return d;
-                                    };
-                %>
-                                        <%= format(meeting.timeStart) %> - <%= format(meeting.timeEnd) %>
-                <%
-                                    if (group.get('sessionCode') != '1') {
-                %>
-                                        <span class="dates">
-                                            <%= group.get('sessionBeginDt') %> -&nbsp;
-                                            <%= group.get('sessionEndDt') %></span>
-                <%
-                                    }
-                %>
-                                    </p>
-                                    <p class="location">
-                                        <%= meeting.facilityDescr %>
-                                    </p>
-                                </div>
-                                <div class="fourth">
-                <%
-                                    var professors = meeting.professors;
-                                    professors = _.map(professors, function(p) {
-                                        return p.firstName + ' ' +
-                                            (p.middleName.length ? p.middleName + ' ' : '') +
-                                            p.lastName;
-                                    });
-                %>
-                                    <%= professors.join(', ') %>
-                                </div>
-                            </div>
-        <%
-                        }
-        %>
-                        </div>
-        <%
-                        var notes = JSON.parse(section.get('notes'));
-                        if (notes.length) {
-        %>
-                        <div class="fifth">
-                            <%= notes.join('; ') %>
-                        </div>
-
-        <%
-                        }
-        %>
-                    </div>
-        <%
-                    }
-        %>
-                </div>
-                <div class="credits">
-                    <p class="primary">4 credits</p>
-                    <p class="secondary">Student Option</p>
-                </div>
-            </div>
-            <hr>
-        <%
-
             }
         %>
     </div>
